# ARIS4ZSC

./: .gitignore  AGENTS.md  Method_design.md  README.md  README_FIXES_20260624.md  guidance.md  pyproject.toml  pytest.ini  requirements.txt
Audit/: audit_multi_strategy_counter_layout_20260602.md  audit_srvf_mappo_formal_classic_cli_20260602.md  audit_srvf_mappo_parallel_rollout_gpu_learner_20260602.md  audit_srvf_mappo_rollout_monitoring_20260602.md  audit_srvf_mappo_single_file_migration_20260602.md  audit_srvf_mappo_vectorization_20260602.md  audit_training_step_budget_20260602.md
configs/: run_grounded_coord_simple_depth3_single_tau.yaml  srvf_mappo_classic.yaml  sweep_grounded_two_rooms_depth23.yaml  sweep_grounded_two_rooms_depth2_debug.yaml  tiny_jaxmarl_cramped_room.yaml  tiny_jaxmarl_cramped_room_choice.yaml  tiny_jaxmarl_grounded_coord_simple.yaml
experiments/common/: metrics.py  utils.py
experiments/overcooked_v2/: batched_rollout.py  ce_sampler.py  diagnostics.py  env_adapter.py  evaluate_aris.py  event_extractor.py  evidence_router.py  graph_builder.py  layout_diagnostics.py  layout_parser.py  obs_encoder.py  obs_featurizer.py  option_inferencer.py  option_termination.py  options.py  partner_option_classifier.py  partner_pool.py  state_utils.py  train_aris.py
experiments/serd/: README.md  __init__.py  fixture_env.py  inspect_tomzsc_pecan_branch_divergence.py  m4_bundle.py  (+21 more)
raob/: __init__.py  srvf_mappo.py  types.py
scripts/: run_depth23_sweep.sh  run_gate3_pytest_from_repo_root.sh  run_gate3_unit_tests.sh
tests/: conftest.py  test_canonical.py  test_invariants.py  test_serd_core.py  test_srvf_mappo.py  test_symbolic_sanity_phase3.py  test_toy_factor_game_fixes.py  test_vectorized_graph_and_diagnostics.py
(+47 files in other folders)
