[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "srvf-mappo-zsc"
version = "0.4.0"
description = "V0-anchored posterior-predictive SRVF-MAPPO for classic Overcooked zero-shot coordination."
requires-python = ">=3.10"
dependencies = ["torch", "numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["raob*"]
