[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcaso-critic-gate3"
version = "0.1.0"
description = "TCASO-CRITIC Gate 3 thin vertical slice certifier for OvercookedV2"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0",
  "jsonschema>=4.20",
]

[project.optional-dependencies]
jaxmarl = [
  "jax>=0.4",
  "jaxmarl==0.1.0",
  "chex",
  "flax",
]
dev = ["pytest>=8"]

[project.scripts]
tcaso-gate3 = "tcaso_critic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
