[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aris4zsc"
version = "0.1.0"
description = "ARIS-Bellman toy experiments for zero-shot coordination via interaction-factor beliefs"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
  "pyyaml>=6.0",
  "jsonschema>=4.20",
  "pytest>=8",
]

[project.optional-dependencies]
jaxmarl = [
  "jax>=0.4",
  "jaxmarl==0.1.0",
  "chex",
  "flax",
]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["experiments"]
